# virtualship

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ElNinoLesson.ipynb  LICENSE  README.md  Sail_the_ship.ipynb  adcpCMEMS.ipynb  adcpCMEMSleafmap.ipynb  adcp_ctdCMEMS.ipynb  codecov.yml  codetools.sh  cruise_plan_info.ipynb  cruise_simulation.py  ctdCMEMS.ipynb  datadownload.py  datadownload.txt  design-doc.md  download_data.py  environment.yml  leafmap_example.ipynb  meta.yaml  noxfile.py  old_code.py  post_process.py  pyproject.toml  sailship.ipynb  sample.json  student_input.json  tests.sh  todo  virtualship.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  codetools.yml
OLD/: ctdCMEMS.ipynb
docs/: classroom-surf-environment.yml  conda_requirements.txt  conf.py  contributing.md  index.md  quickstart.md
docs/api/: index.md
docs/contributing/: index.md
docs/tutorials/: ADCP_data_tutorial.ipynb  Argo_float_tutorial.ipynb  CTD_data_tutorial.ipynb  Drifter_data_tutorial.ipynb  Research_Proposal_only.ipynb  Virtualship_research_proposal.ipynb  index.md  my_tutorial.ipynb
docs/user-guide/: index.md  quickstart.md
docs/user-guide/_images/: links.ipynb
docs/user-guide/assignments/: Code_of_conduct.ipynb  Research_proposal_intro.ipynb  Sail_the_ship.ipynb  Virtualship_research_proposal.ipynb  index.md  sciencecommunication_assignment.ipynb
docs/user-guide/tutorials/: ADCP_data_tutorial.ipynb  ADCP_transects.ipynb  Argo_data_tutorial.ipynb  CTD_data_tutorial.ipynb  CTD_transects.ipynb  Drifter_data_tutorial.ipynb  Research_Proposal_only.ipynb  Research_proposal_intro.ipynb  Sail_the_ship.ipynb  Virtualship_research_proposal.ipynb  index.md  old_surf_research_cloud_setup.ipynb  surf_research_cloud_setup.ipynb  surf_research_cloud_setup.md
lesson_material/: cruise_plan_info.ipynb
scripts/: CoordinatesExport-Filled.csv  coordinates_to_yaml_output.yaml  download_data.py  mfp_2_yaml.py
src/: cruise_simulation.py  cruise_simulation_CTD.py  datadownload.txt  leafmap_example.ipynb  sailship.ipynb  submit.sh  virtualship.py
src/IPO/: cruise_simulation.py  post_process.py  submit.sh
src/OLD/: leafmap_example.ipynb
src/results/: CTD_station_1.csv  CTD_station_2.csv  CTD_station_3.csv  CTD_station_4.csv  CTD_station_5.csv  CTD_station_6.csv  CTD_station_7.csv  CTD_station_8.csv  CTD_station_9.csv
src/virtualship/: __init__.py  errors.py  location.py  log_filter.py  utils.py
src/virtualship/cli/: _creds.py  _fetch.py  _plan.py  commands.py  compat.py  main.py  validator_utils.py
src/virtualship/expedition/: __init__.py  area_of_interest.py  checkpoint.py  do_expedition.py  input_data.py  instrument_type.py  schedule.py  ship_config.py  simulate_measurements.py  simulate_schedule.py  space_time_region.py  verify_schedule.py  waypoint.py
src/virtualship/instruments/: __init__.py  adcp.py  argo_float.py  ctd.py  ctd_bgc.py  drifter.py  ship_underwater_st.py  xbt.py
src/virtualship/make_realistic/: adcp_make_realistic.py
src/virtualship/models/: __init__.py  location.py  schedule.py  ship_config.py  space_time_region.py
src/virtualship/static/: __init__.py  schedule.yaml  ship_config.yaml
teaching_material/Assignment/: CodeOfConduct.docx  README.md
teaching_material/Assignment/Preparatory_exercises/: A01_Q1.ipynb  A01_Q1_withanswer.ipynb  A02_Q1.ipynb  A02_Q1_withanswers.ipynb  A03_Q1.ipynb  A03_Q1_withanswers.ipynb  A04_Q1.ipynb  A04_Q1_withanswers.ipynb  A05_Q1.ipynb  A05_Q1_withanswers.ipynb  A06_Q1.ipynb  A06_Q1_withanswers.ipynb
teaching_material/ElNino/: Cruise_part2_IPO.ipynb  ElNinoLesson.ipynb  El_Nino_cruise_IPO.ipynb
tests/: conftest.py  parcelscrash.py  sailship_config.json  test.yaml  test_cli.py  test_config_generation.py  test_loop.py  test_mfp_to_yaml.py  test_sailship.py  test_schedule.py  test_utils.py
tests/cli/: test_cli.py  test_creds.py  test_fetch.py  test_plan.py
tests/expedition/: schedule.yaml  ship_config.yaml  test.yaml  test_do_expedition.py  test_expedition.py  test_schedule.py  test_ship_config.py  test_simulate_schedule.py
tests/expedition/expedition_dir/: schedule.yaml  ship_config.yaml
tests/expedition/expedition_dir/input_data/: .gitignore  argo_float_uv.nc  bathymetry.nc  ctd_bgc_chloro.nc  ctd_bgc_no3.nc  ctd_bgc_nppv.nc  ctd_bgc_o2.nc  ctd_bgc_ph.nc  ctd_bgc_phyc.nc  ctd_bgc_po4.nc  ctd_bgc_zooc.nc  default_uv.nc  drifter_t.nc  (+3 more)
tests/expedition/results/: cost.txt
tests/instruments/: test_adcp.py  test_argo.py  test_argo_float.py  test_ctd.py  test_ctd_bgc.py  test_drifter.py  test_drifters.py  test_ship_st.py  test_ship_underwater_st.py  test_xbt.py
tests/make_realistic/: .gitignore  test_adcp_make_realistic.py  test_ctd_make_realistic.py
tests/make_realistic/adcp.zarr/: .zattrs  .zmetadata
tests/make_realistic/ctd.zarr/: .zattrs  .zmetadata
tests/sensors/: test_argo.py
virtual_ship/: __init__.py  argo_deployments.py  checkpoint.py  costs.py  do_expedition.py  drifter_deployments.py  expedition_cost.py  input_data.py  instrument_deployment.py  instrument_type.py  location.py  loop.py  planning_error.py  postprocess.py  priority_queue.py  sailship.py  schedule.py  ship_config.py  simulate_measurements.py  simulate_schedule.py  sorted_queue.py  spacetime.py  verify_schedule.py  virtual_ship_config.py  virtual_ship_configuration.py  waypoint.py
virtual_ship/cli/: __init__.py  do_expedition.py
virtual_ship/expedition/: __init__.py  checkpoint.py  do_expedition.py  expedition_cost.py  input_data.py  instrument_type.py  schedule.py  ship_config.py  simulate_measurements.py  simulate_schedule.py  verify_schedule.py  waypoint.py
virtual_ship/instruments/: __init__.py  adcp.py  argo.py  argo_float.py  ctd.py  drifter.py  location.py  ship_st.py  ship_underwater_st.py
virtual_ship/make_realistic/: __init__.py  adcp_make_realistic.py  ctd_make_realistic.py
virtual_ship/sensors/: location.py
virtualship/cli/: do_expedition.py
virtualship/expedition/: input_data.py  ship_config.py  simulate_schedule.py
(+10923 files in other folders)
